--- a/notebooks/exploratory_analysis.ipynb
+++ b/notebooks/exploratory_analysis.ipynb
@@ -68,7 +68,7 @@
     "\n",
     "from skimage.util import montage\n",
     "from skimage.segmentation import mark_boundaries\n",
-    "from src.dataloader import Dataloader\n",
+    "from src.data_module import SegmentationDataModule\n",
     "from src.utils import montage_rgb"
    ],
    "metadata": {
@@ -480,7 +480,7 @@
    "source": [
     "df = pd.read_csv(train_csv_path)\n",
     "    \n",
-    "train_gen = iter(Dataloader(\".dataset/train_v2/\", df, 9, 384, False))\n",
+    "train_gen = iter(SegmentationDataModule(\".dataset/train_v2/\", df, 9, 384, False))\n",
     "train_x, train_y = next(train_gen)\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize = (30, 10))\n",
