--- a/notebooks/exploratory_analysis.ipynb
+++ b/notebooks/exploratory_analysis.ipynb
@@ -479,8 +479,8 @@
    "cell_type": "code",
    "source": [
     "df = pd.read_csv(train_csv_path)\n",
-    "    \n",
-    "train_gen = iter(SegmentationDataModule(\".dataset/train_v2/\", df, 9, 384, False))\n",
+    "hparams = {\"params\": {\"image_size\": 256, \"batch_size\": 9}, \"data\": {\"images_dir\": \".dataset/train_v2/\"}}\n",
+    "train_gen = iter(SegmentationDataModule(hparams))\n",
     "train_x, train_y = next(train_gen)\n",
     "\n",
     "fig, (ax1, ax2, ax3) = plt.subplots(1, 3, figsize = (30, 10))\n",
